[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/GameOver.gd" type="Script" id=2]
[ext_resource path="res://themes/Blur.tres" type="Material" id=3]
[ext_resource path="res://assets/UI/restarticon.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=6]
[ext_resource path="res://scripts/misc/LoadDataHelper.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="GameOverUI" type="CanvasLayer"]
pause_mode = 2

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="LoadDataHelper" type="Node2D" parent="GameOver"]
script = ExtResource( 7 )

[node name="Blur" type="ColorRect" parent="GameOver"]
material = ExtResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1082.0
margin_top = -610.0
margin_right = 1098.0
margin_bottom = 559.0
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.5
margin_top = -188.0
margin_right = 309.5
margin_bottom = 188.0
texture = ExtResource( 5 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="[GameOver]" type="Label" parent="GameOver/NinePatchRect"]
anchor_left = 13.6
anchor_top = 3.75
anchor_right = 13.6
anchor_bottom = 3.75
margin_left = -8638.9
margin_top = -1401.0
margin_right = -7603.9
margin_bottom = -1325.0
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1

[node name="ReturnLabel" type="Label" parent="GameOver/NinePatchRect"]
anchor_left = 7.697
anchor_top = 9.846
anchor_right = 7.697
anchor_bottom = 9.846
margin_left = -4669.94
margin_top = -3480.1
margin_right = -4507.94
margin_bottom = -3413.1
custom_fonts/font = SubResource( 2 )
text = "Restart
Level"
align = 1

[node name="ReturnButton" type="Button" parent="GameOver/NinePatchRect"]
anchor_left = 6.64
anchor_top = 7.125
anchor_right = 6.64
anchor_bottom = 7.125
margin_left = -4010.66
margin_top = -2605.0
margin_right = -3860.66
margin_bottom = -2455.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="ExitLabel" type="Label" parent="GameOver/NinePatchRect"]
anchor_left = 19.041
anchor_top = 9.825
anchor_right = 19.041
anchor_bottom = 9.825
margin_left = -11407.9
margin_top = -3472.2
margin_right = -11278.9
margin_bottom = -3426.2
custom_fonts/font = SubResource( 2 )
text = "Main menu"

[node name="ExitButton" type="Button" parent="GameOver/NinePatchRect"]
anchor_left = 18.99
anchor_top = 7.125
anchor_right = 18.99
anchor_bottom = 7.125
margin_left = -11388.3
margin_top = -2605.0
margin_right = -11238.3
margin_bottom = -2455.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="GameOver" to="GameOver" method="_on_GameOver_visibility_changed"]
[connection signal="pressed" from="GameOver/NinePatchRect/ReturnButton" to="GameOver" method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="GameOver/NinePatchRect/ExitButton" to="GameOver" method="_on_ExitButton_pressed"]
